chore: import config.yml, remove deprecated Skull.java usage, update Java target in Gradle
build: change Java target in build.gradle.kts
chore: import config.yml
refactor: remove deprecated code in Skull.java